🎨 Customize Scrollbar Styling
- Set scrollbar track background to black (#000).
- Set scrollbar thumb color to red (#E7000B).
- Added hover effect to darken the scrollbar thumb.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,22 @@
 @import "tailwindcss";
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #000;
+}
+
+
+::-webkit-scrollbar-thumb {
+    background: #E7000B;
+    /* أحمر */
+    border-radius: 5px;
+}
+
+/* تغيير لون شريط التمرير عند تمرير الماوس فوقه */
+::-webkit-scrollbar-thumb:hover {
+    background: #b50009
+}
